syntax = "proto3";

package grpc;
option go_package = "github.com/m4slah/redroc/lib/proto";

message UploadImageRequest {
    string obj_name = 1;
    bytes image = 2;
}
message UploadImageResponse {}

message CreateMetadataRequest {
  string obj_name = 1;
  string user = 2;
  repeated string hashtags = 3;
}
message CreateMetadataResponse {}

service UploadPhoto {
  /*
   * RPC for upload a photo to the image database
   */
  rpc Upload(UploadImageRequest) returns (UploadImageResponse);

  /*
   * RPC for create hashtag-image mapping in the metadata database
   */
  rpc CreateMetadata(CreateMetadataRequest) returns (CreateMetadataResponse);
}
